--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
         </section>
         <aside class="indexAsideGrid">
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li>
+                    <a href="store.html">🛍️</a>
+                </li>
+                <li>
+                    <a href="store.html">SUPPORT</a>
+                </li>
+                <li>
+                    <a href="store.html">ABOUT</a>
+                </li>
             </ul>
         </aside>   
         </div>
