--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <aside class="indexAsideGrid">
             <ul>
                 <li>
-                    <a href="store.html">🛍️</a>
+                    <a href="store.html"> SHOP </a>
                 </li>
                 <li>
-                    <a href="store.html">SUPPORT</a>
+                    <a href="store.html"> SUPPORT </a>
                 </li>
                 <li>
                     <a href="store.html">ABOUT</a>
