--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     </header>
     <main>
         <div class="indexMainGrid">
-         <section class="indexSectionGrid">
-            <img src="door.png" alt="dörr">
-        </section>
-        <aside class="indexAsideGrid">
-            <ul>
-                <li>
-                    <a href="store.html"> SHOP </a>
-                </li>
-                <li>
-                    <a href="store.html"> SUPPORT </a>
-                </li>
-                <li>
-                    <a href="store.html">ABOUT</a>
-                </li>
-            </ul>
-        </aside>   
+            <section class="indexSectionGrid">
+                <img class = "not_logo" src="door.png" alt="door">
+            </section>
+            <aside class="indexAsideGrid">
+                <ul>
+                    <li>
+                      <a href="store.html"> SHOP </a>
+                   </li>
+                   <li>
+                      <a href="store.html"> SUPPORT </a>
+                   </li>
+                  <li>
+                       <a href="store.html">ABOUT</a>
+                   </li>
+             </ul>  
+            </aside>
         </div>
             
     </main>
