--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
     <main>
         <div class="indexMainGrid">
             <section class="indexSectionGrid">
-                <img class = "not_logo" src="door.png" alt="door">
+                <img class = "not_logo" src="door.png" alt="dörr">
+                <div class="previewGrid">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                </div>
             </section>
             <aside class="indexAsideGrid">
                 <ul>
@@ -32,7 +46,6 @@
              </ul>  
             </aside>
         </div>
-            
     </main>
     <footer>
         COPYRIGHT DÖRRKUNGEN™ AB 2020©®
