--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
             <section class="indexSectionGrid">
                 <img class = "not_logo" src="door.png" alt="dörr">
                 <div class="previewGrid">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
-                    <img class="prevImg" src="doorPrev.jpg" alt="dörr">
+                    <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/italianRedDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/oldDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/oldDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/italianRedDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/italianRedDoor.jpg" alt="dörr">
+                    <img class="prevImg" src="images/oldDoor.jpg" alt="dörr">
                 </div>
             </section>
             <aside class="indexAsideGrid">
