--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="temp_logo.png" alt="Dörrkungen">
+            <img src="images/temp_logo.png" alt="Dörrkungen">
         </a>
         <hr>
     </header>
     <main>
         <div class="indexMainGrid">
             <section class="indexSectionGrid">
-                <img class = "not_logo" src="door.png" alt="dörr">
+                <img class = "not_logo" src="images/castleDoor.jpg" alt="dörr">
                 <div class="previewGrid">
                     <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
                     <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
