--- a/store.html
+++ b/store.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="temp_logo.png" alt="Dörrkungen">
+            <img src="images/temp_logo.png" alt="Dörrkungen">
         </a>
         <hr>
     </header>
