--- a/index.html
+++ b/index.html
@@ -33,17 +33,11 @@
                 </div>
             </section>
             <aside class="indexAsideGrid">
-                <ul>
-                    <li>
-                      <a href="store.html"> SHOP </a>
-                   </li>
-                   <li>
-                      <a href="store.html"> SUPPORT </a>
-                   </li>
-                  <li>
-                       <a href="store.html">ABOUT</a>
-                   </li>
-             </ul>  
+                <div class="buttonGrid">
+                    <button class="red" onclick="window.location.href='store.html'">STORE</button>
+                    <button class="green" onclick="window.location.href='store.html'">SUPPORT</button>
+                    <button class="blue" onclick="window.location.href='store.html'">INFO</button>
+                </div>
             </aside>
         </div>
     </main>
