knappar. btw lägg till knappar i header

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <button class="green" onclick="window.location.href='store.html'">SUPPORT</button>
                     <button class="blue" onclick="window.location.href='store.html'">INFO</button>
                 </div>
+                <img class="asideAd" src="images/redDoor.jpg" alt="röd dörr">
             </aside>
         </div>
     </main>
