--- a/index.html
+++ b/index.html
@@ -18,18 +18,46 @@
             <section class="indexSectionGrid">
                 <img class = "not_logo" src="images/castleDoor.jpg" alt="dörr">
                 <div class="previewGrid">
-                    <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/italianRedDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/oldDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/oldDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/italianRedDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/blueDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/redCastleDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/italianRedDoor.jpg" alt="dörr">
-                    <img class="prevImg" src="images/oldDoor.jpg" alt="dörr">
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
+                        <p class="prevTitle">BLÅ DÖRR</p>
+                        <p>En klassisk blå dörr - 899kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
+                        <p class="prevTitle">RÖD DÖRR</p>
+                        <p>En italiensk röd dörr - 1199kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
+                        <p class="prevTitle">KUNGLIG DÖRR</p>
+                        <p>En kunglig röd dörr - 899kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
+                        <p class="prevTitle">RETRO DÖRR</p>
+                        <p>En antik retro dörr - 1099kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
+                        <p class="prevTitle">RETRO DÖRR</p>
+                        <p>En antik retro dörr - 1099kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
+                        <p class="prevTitle">BLÅ DÖRR</p>
+                        <p>En klassisk blå dörr - 899kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
+                        <p class="prevTitle">RÖD DÖRR</p>
+                        <p>En italiensk röd dörr - 1199kr</p>
+                    </div>
+                    <div class="prodPrev">
+                        <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
+                        <p class="prevTitle">KUNGLIG DÖRR</p>
+                        <p>En kunglig röd dörr - 899kr</p>
+                    </div>
                 </div>
             </section>
             <aside class="indexAsideGrid">
@@ -38,7 +66,7 @@
                     <button class="green" onclick="window.location.href='store.html'">SUPPORT</button>
                     <button class="blue" onclick="window.location.href='store.html'">INFO</button>
                 </div>
-                <img class="asideAd" src="images/redDoor.jpg" alt="röd dörr">
+                <img class="adAside" src="images/redDoor.jpg" alt="röd dörr">
             </aside>
         </div>
     </main>
