--- a/product.html
+++ b/product.html
@@ -13,7 +13,10 @@
         </a>
         <hr>
     </header>
-    <main></main>
+    <main>
+        <div class="prodGrid"></div>
+        <img class="prodView" src="images/oldDoor.jpg" alt="grå dörr">
+    </main>
     <footer>
         COPYRIGHT DÖRRKUNGEN™ AB 2020©®
     </footer>
