--- a/product.html
+++ b/product.html
@@ -14,8 +14,15 @@
         <hr>
     </header>
     <main>
-        <div class="prodGrid"></div>
-        <img class="prodView" src="images/oldDoor.jpg" alt="grå dörr">
+        <div class="prodGrid">
+            <img class="prodView" src="images/oldDoor.jpg" alt="grå dörr">
+            <div class="prodText">
+                <h1>Retro dörr</h1>
+                <p>En retro, antik och vintage dörr som passar till alla dörr situationer</p>
+                <p> - 1099kr</p>
+                <button class="red">KÖP PRODUKT</button>
+            </div>
+        </div>
     </main>
     <footer>
         COPYRIGHT DÖRRKUNGEN™ AB 2020©®
