--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="buttonGrid">
                     <button class="red" onclick="window.location.href='store.html'">STORE</button>
                     <button class="green" onclick="window.location.href='store.html'">SUPPORT</button>
-                    <button class="blue" onclick="window.location.href='store.html'">INFO</button>
+                    <button class="blue" onclick="window.location.href='info.html'">INFO</button>
                 </div>
                 <img class="adAside" src="images/redDoor.jpg" alt="röd dörr">
             </aside>
