--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
         <div></div>
         <div>
             <h1>Om Dörrkungen</h1>
-            <img src="images/redDoor.jpg" alt="röd dörr">
+            <img class="adAside" src="images/redDoor.jpg" alt="röd dörr">
             <p>
                 Vårat uppdrag på Dörrkungen är att förse dig med de bästa dörrarna på marknaden, för de lägsta priserna. 
                 Vårat stora utbud garanterar att du kan hitta precis den dörr som passar dig. Vårat företag grundades i 
