--- a/store.html
+++ b/store.html
@@ -13,7 +13,71 @@
         </a>
         <hr>
     </header>
-    <main></main>
+    <main>
+        <p class="search">Sök på din dörr</p>
+        <div class="previewGrid">
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
+                <p class="prevTitle">BLÅ DÖRR</p>
+                <p>En klassisk blå dörr - 899kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
+                <p class="prevTitle">RÖD DÖRR</p>
+                <p>En italiensk röd dörr - 1199kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
+                <p class="prevTitle">KUNGLIG DÖRR</p>
+                <p>En kunglig röd dörr - 899kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
+                <p class="prevTitle">RETRO DÖRR</p>
+                <p>En antik retro dörr - 1099kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
+                <p class="prevTitle">RETRO DÖRR</p>
+                <p>En antik retro dörr - 1099kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
+                <p class="prevTitle">BLÅ DÖRR</p>
+                <p>En klassisk blå dörr - 899kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
+                <p class="prevTitle">RÖD DÖRR</p>
+                <p>En italiensk röd dörr - 1199kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
+                <p class="prevTitle">KUNGLIG DÖRR</p>
+                <p>En kunglig röd dörr - 899kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
+                <p class="prevTitle">KUNGLIG DÖRR</p>
+                <p>En kunglig röd dörr - 899kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
+                <p class="prevTitle">RETRO DÖRR</p>
+                <p>En antik retro dörr - 1099kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
+                <p class="prevTitle">BLÅ DÖRR</p>
+                <p>En klassisk blå dörr - 899kr</p>
+            </div>
+            <div class="prodPrev">
+                <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
+                <p class="prevTitle">RÖD DÖRR</p>
+                <p>En italiensk röd dörr - 1199kr</p>
+            </div>
+        </div>
+    </main>
     <footer>
         COPYRIGHT DÖRRKUNGEN™ AB 2020©®
     </footer>
