--- a/index.html
+++ b/index.html
@@ -1,77 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <img src="images/temp_logo.png" alt="Dörrkungen">
-        </a>
-        <hr>
-    </header>
-    <main>
-        <div class="indexMainGrid">
-            <section class="indexSectionGrid">
-                <img class = "not_logo" src="images/castleDoor.jpg" alt="dörr">
-                <div class="previewGrid">
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
-                        <p class="prevTitle">BLÅ DÖRR</p>
-                        <p>En klassisk blå dörr - 899kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
-                        <p class="prevTitle">RÖD DÖRR</p>
-                        <p>En italiensk röd dörr - 1199kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
-                        <p class="prevTitle">KUNGLIG DÖRR</p>
-                        <p>En kunglig röd dörr - 899kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
-                        <p class="prevTitle">RETRO DÖRR</p>
-                        <p>En antik retro dörr - 1099kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"></a>
-                        <p class="prevTitle">RETRO DÖRR</p>
-                        <p>En antik retro dörr - 1099kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"></a>
-                        <p class="prevTitle">BLÅ DÖRR</p>
-                        <p>En klassisk blå dörr - 899kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/italianRedDoor.jpg" alt="röd dörr"></a>
-                        <p class="prevTitle">RÖD DÖRR</p>
-                        <p>En italiensk röd dörr - 1199kr</p>
-                    </div>
-                    <div class="prodPrev">
-                        <a href="product.html"><img class="prevImg" src="images/redCastleDoor.jpg" alt="röd dörr"></a>
-                        <p class="prevTitle">KUNGLIG DÖRR</p>
-                        <p>En kunglig röd dörr - 899kr</p>
-                    </div>
-                </div>
-            </section>
-            <aside class="indexAsideGrid">
-                <div class="buttonGrid">
-                    <button class="red" onclick="window.location.href='store.html'">STORE</button>
-                    <button class="green" onclick="window.location.href='store.html'">SUPPORT</button>
-                    <button class="blue" onclick="window.location.href='info.html'">INFO</button>
-                </div>
-                <img class="adAside" src="images/redDoor.jpg" alt="röd dörr">
-            </aside>
-        </div>
-    </main>
-    <footer>
-        COPYRIGHT DÖRRKUNGEN™ AB 2020©®
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<a href="index.html">
+				<img src="images/temp_logo.png" alt="Dörrkungen" />
+			</a>
+			<hr />
+		</header>
+		<main>
+			<div class="indexMainGrid">
+				<section class="indexSectionGrid">
+					<img class="not_logo" src="images/castleDoor.jpg" alt="dörr" />
+					<div class="previewGrid">
+						<div class="prodPrev">
+							<a href="product.html"
+								><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"
+							/></a>
+							<p class="prevTitle">BLÅ DÖRR</p>
+							<p>En klassisk blå dörr - 899kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img
+									class="prevImg"
+									src="images/italianRedDoor.jpg"
+									alt="röd dörr"
+							/></a>
+							<p class="prevTitle">RÖD DÖRR</p>
+							<p>En italiensk röd dörr - 1199kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img
+									class="prevImg"
+									src="images/redCastleDoor.jpg"
+									alt="röd dörr"
+							/></a>
+							<p class="prevTitle">KUNGLIG DÖRR</p>
+							<p>En kunglig röd dörr - 899kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"
+							/></a>
+							<p class="prevTitle">RETRO DÖRR</p>
+							<p>En antik retro dörr - 1099kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img class="prevImg" src="images/oldDoor.jpg" alt="grå dörr"
+							/></a>
+							<p class="prevTitle">RETRO DÖRR</p>
+							<p>En antik retro dörr - 1099kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img class="prevImg" src="images/blueDoor.jpg" alt="blå dörr"
+							/></a>
+							<p class="prevTitle">BLÅ DÖRR</p>
+							<p>En klassisk blå dörr - 899kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img
+									class="prevImg"
+									src="images/italianRedDoor.jpg"
+									alt="röd dörr"
+							/></a>
+							<p class="prevTitle">RÖD DÖRR</p>
+							<p>En italiensk röd dörr - 1199kr</p>
+						</div>
+						<div class="prodPrev">
+							<a href="product.html"
+								><img
+									class="prevImg"
+									src="images/redCastleDoor.jpg"
+									alt="röd dörr"
+							/></a>
+							<p class="prevTitle">KUNGLIG DÖRR</p>
+							<p>En kunglig röd dörr - 899kr</p>
+						</div>
+					</div>
+				</section>
+				<aside class="indexAsideGrid">
+					<div class="buttonGrid">
+						<button class="red" onclick="window.location.href='store.html'">
+							STORE
+						</button>
+						<button class="green" onclick="window.location.href='store.html'">
+							SUPPORT
+						</button>
+						<button class="blue" onclick="window.location.href='info.html'">
+							INFO
+						</button>
+					</div>
+					<img class="adAside" src="images/redDoor.jpg" alt="röd dörr" />
+				</aside>
+			</div>
+		</main>
+		<footer>COPYRIGHT DÖRRKUNGEN™ AB 2020©®</footer>
+	</body>
 </html>
