--- a/info.html
+++ b/info.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <img src="images/temp_logo.png" alt="Dörrkungen">
-        </a>
-        <hr>
-    </header>
-    <main id="info">
-        <div></div>
-        <div>
-            <h1>Om Dörrkungen</h1>
-            <img class="adAside" src="images/redDoor.jpg" alt="röd dörr">
-            <p>
-                Vårat uppdrag på Dörrkungen är att förse dig med de bästa dörrarna på marknaden, för de lägsta priserna.
-                Vårat stora utbud garanterar att du kan hitta precis den dörr som passar dig. Vårat företag grundades i
-                Bir Tawil år 2020, och ännu har vi vårt högkvarter och våra dörrfabriker där. Våra arbetare är utbildade
-                och har erfarenhet med dörrhantverk från flertalet länder, som t.ex. Italien, Sydamerika, Egypten och
-                Sudan. Om du har mer frågor om t.ex. vårt miljösmart-programm kan du ta en titt på våran support sida,
-                där det finns en QnA och kontaktinformation.
-            </p>
-        </div>
-        <aside class="indexAsideGrid">
-            <div class="buttonGrid">
-                <button class="red" onclick="window.location.href='store.html'">STORE</button>
-                <button class="green" onclick="window.location.href='store.html'">SUPPORT</button>
-                <button class="blue" onclick="window.location.href='info.html'">INFO</button>
-            </div>
-            <img class="adAside" src="images/redDoor.jpg" alt="röd dörr">
-        </aside>
-    </main>
-    <footer>
-        COPYRIGHT DÖRRKUNGEN™ AB 2020©®
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<a href="index.html">
+				<img src="images/temp_logo.png" alt="Dörrkungen" />
+			</a>
+			<hr />
+		</header>
+		<main id="info">
+			<div></div>
+			<div>
+				<h1>Om Dörrkungen</h1>
+				<img class="adAside" src="images/redDoor.jpg" alt="röd dörr" />
+				<p>
+					Vårat uppdrag på Dörrkungen är att förse dig med de bästa dörrarna på
+					marknaden, för de lägsta priserna. Vårat stora utbud garanterar att du
+					kan hitta precis den dörr som passar dig. Vårat företag grundades i
+					Bir Tawil år 2020, och ännu har vi vårt högkvarter och våra
+					dörrfabriker där. Våra arbetare är utbildade och har erfarenhet med
+					dörrhantverk från flertalet länder, som t.ex. Italien, Sydamerika,
+					Egypten och Sudan. Om du har mer frågor om t.ex. vårt
+					miljösmart-programm kan du ta en titt på våran support sida, där det
+					finns en QnA och kontaktinformation.
+				</p>
+			</div>
+			<aside class="indexAsideGrid">
+				<div class="buttonGrid">
+					<button class="red" onclick="window.location.href='store.html'">
+						STORE
+					</button>
+					<button class="green" onclick="window.location.href='store.html'">
+						SUPPORT
+					</button>
+					<button class="blue" onclick="window.location.href='info.html'">
+						INFO
+					</button>
+				</div>
+				<img class="adAside" src="images/redDoor.jpg" alt="röd dörr" />
+			</aside>
+		</main>
+		<footer>COPYRIGHT DÖRRKUNGEN™ AB 2020©®</footer>
+	</body>
 </html>
