--- a/product.html
+++ b/product.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <img src="images/temp_logo.png" alt="Dörrkungen">
-        </a>
-        <hr>
-    </header>
-    <main>
-        <div class="prodGrid">
-            <img class="prodView" src="images/oldDoor.jpg" alt="grå dörr">
-            <div class="prodText">
-                <h1>Retro dörr</h1>
-                <p>En retro, antik och vintage dörr som passar till alla dörr situationer</p>
-                <p> - 1099kr</p>
-                <button class="red">KÖP PRODUKT</button>
-            </div>
-        </div>
-    </main>
-    <footer>
-        COPYRIGHT DÖRRKUNGEN™ AB 2020©®
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<a href="index.html">
+				<img src="images/temp_logo.png" alt="Dörrkungen" />
+			</a>
+			<hr />
+		</header>
+		<main>
+			<div class="prodGrid">
+				<img class="prodView" src="images/oldDoor.jpg" alt="grå dörr" />
+				<div class="prodText">
+					<h1>Retro dörr</h1>
+					<p>
+						En retro, antik och vintage dörr som passar till alla dörr
+						situationer
+					</p>
+					<p>- 1099kr</p>
+					<button class="red">KÖP PRODUKT</button>
+				</div>
+			</div>
+		</main>
+		<footer>COPYRIGHT DÖRRKUNGEN™ AB 2020©®</footer>
+	</body>
 </html>
