--- a/support.html
+++ b/support.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <img src="images/temp_logo.png" alt="Dörrkungen">
-        </a>
-        <hr>
-    </header>
-    <main> </main>
-    <footer>
-        COPYRIGHT DÖRRKUNGEN™ AB 2020©®
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<a href="index.html">
+				<img src="images/temp_logo.png" alt="Dörrkungen" />
+			</a>
+			<hr />
+		</header>
+		<main></main>
+		<footer>COPYRIGHT DÖRRKUNGEN™ AB 2020©®</footer>
+	</body>
 </html>
