idk glömde pusha

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 			<div></div>
 			<div>
 				<h1>Om Dörrkungen</h1>
-				<img class="adAside" src="images/redDoor.jpg" alt="röd dörr" />
+				<img class="aboutImg" src="images/redDoor.jpg" alt="röd dörr" />
 				<p>
 					Vårat uppdrag på Dörrkungen är att förse dig med de bästa dörrarna på
 					marknaden, för de lägsta priserna. Vårat stora utbud garanterar att du
@@ -30,20 +30,6 @@
 					finns en QnA och kontaktinformation.
 				</p>
 			</div>
-			<aside class="indexAsideGrid">
-				<div class="buttonGrid">
-					<button class="red" onclick="window.location.href='store.html'">
-						STORE
-					</button>
-					<button class="green" onclick="window.location.href='store.html'">
-						SUPPORT
-					</button>
-					<button class="blue" onclick="window.location.href='info.html'">
-						INFO
-					</button>
-				</div>
-				<img class="adAside" src="images/redDoor.jpg" alt="röd dörr" />
-			</aside>
 		</main>
 		<footer>COPYRIGHT DÖRRKUNGEN™ AB 2020©®</footer>
 	</body>
