--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 						<button class="red" onclick="window.location.href='store.html'">
 							STORE
 						</button>
-						<button class="green" onclick="window.location.href='store.html'">
+						<button class="green" onclick="window.location.href='support.html'">
 							SUPPORT
 						</button>
-						<button class="blue" onclick="window.location.href='info.html'">
+						<button class="blue" onclick="window.location.href='about.html'">
 							INFO
 						</button>
 					</div>
