about klar support kvar

--- a/about.html
+++ b/about.html
@@ -17,7 +17,11 @@
 			<div></div>
 			<div>
 				<h1>Om Dörrkungen</h1>
-				<img class="aboutImg" src="images/redDoor.jpg" alt="röd dörr" />
+				<img
+					class="aboutImg"
+					src="images/Dörrkungen_ind.jpg"
+					alt="dörr fabrik"
+				/>
 				<p>
 					Vårat uppdrag på Dörrkungen är att förse dig med de bästa dörrarna på
 					marknaden, för de lägsta priserna. Vårat stora utbud garanterar att du
