--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 					dörrhantverk från flertalet länder, som t.ex. Italien, Sydamerika,
 					Egypten och Sudan. Om du har mer frågor om t.ex. vårt
 					miljösmart-programm kan du ta en titt på våran support sida, där det
-					finns en QnA och kontaktinformation.
+					finns en FAQ och kontaktinformation.
 				</p>
 			</div>
 		</main>
