--- a/support.html
+++ b/support.html
@@ -13,7 +13,30 @@
 			</a>
 			<hr />
 		</header>
-		<main></main>
+		<main class="indexMainGrid">
+			<div id="info">
+				<h1>Vad är erat miljö-smart programm?</h1>
+				<p>
+					Vi på dörrkungen strävar alltid efter att hjälpa våra kunder, men
+					också att hjälpa den värld vi lever i. FN tror jag sa nångting om
+					miljö nån gång och vi på dörrkungen vill göra allt för att nå FN
+					målen. Därför görs alla dörrar på dörrkungen av naturliga material som
+					trä eller metall.
+				</p>
+				<h1>Varför lämnas denna sida in så sent?</h1>
+				<p>
+					Jag trodde det skulle gå mycket snabbare att göra denna sida. Men jag
+					har lärt mig till nästa gång att det är en dålig idé att prokrastinera
+					när det gäller webbutveckling. Jag får ta igen i nästa projekt
+					förhoppningsvis.
+				</p>
+			</div>
+			<aside class="asideGrid">
+				<h1>email: dkdoors@indust.bt</h1>
+				<h1>tel.: 817 414 56</h1>
+				<h1>address: Bir Tawil Str. 3</h1>
+			</aside>
+		</main>
 		<footer>COPYRIGHT DÖRRKUNGEN™ AB 2020©®</footer>
 	</body>
 </html>
